[package]
name = "scalable_cuckoo_filter"
version = "0.1.2"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A variant of Cuckoo Filter whose size automatically scales as necessary"
homepage = "https://github.com/sile/scalable_cuckoo_filter"
repository = "https://github.com/sile/scalable_cuckoo_filter"
readme = "README.md"
keywords = ["cuckoo-filter", "bloom-filter"]
categories = ["data-structures"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/scalable_cuckoo_filter"}
codecov = {repository = "sile/scalable_cuckoo_filter"}

[dependencies]
rand = "0.5"
siphasher = "0.2"