[package]
name = "scalable_cuckoo_filter"
edition = "2021"
version = "0.2.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A variant of Cuckoo Filter whose size automatically scales as necessary"
homepage = "https://github.com/sile/scalable_cuckoo_filter"
repository = "https://github.com/sile/scalable_cuckoo_filter"
readme = "README.md"
keywords = ["cuckoo-filter", "bloom-filter"]
categories = ["data-structures"]
license = "MIT"

[features]
serde_support = ["serde","serde_bytes"]

[badges]
coveralls = {repository = "sile/scalable_cuckoo_filter"}

[dependencies]
rand = "0.8"
siphasher = "1"
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
serde_bytes = { version = "0.11", optional = true }

[dev-dependencies]
serde_json = "1.0"
